--- a/ckanext/kata/theme/public/less/home.less
+++ b/ckanext/kata/theme/public/less/home.less
@@ -50,6 +50,7 @@
       max-width: @steps-image-size * 0.3 + @steps-image-size;
       display: inline-block;
       padding: 24px 30px 20px 30px;
+      vertical-align: top;
       &.steps-arrow {
         padding-top: @steps-image-size / 2 + 10px;
         padding-left: 0;
